--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,15 @@
 <!DOCTYPE html>
-<meta charset="utf-8">
+<html lang="ja">
+    <head>
+        <meta charset="utf-8">
+        <style>
+            html, body { margin: 0; padding: 0; background-color: #000; }
+            #content { margin: 20px auto; width: 800px; height: 600px; box-shadow: 0 0 15px rgba(255, 255, 255, 0.3); }
+        </style>
+</head>
+<body>
 <div id="content"></div>
 <script src="./build/vendor.js"></script>
 <script src="./build/app.js"></script>
+</body>
+</html>
